<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.boatpos</groupId>
    <artifactId>boatpos</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <modules>
        <module>boatpos-server</module>
    </modules>

    <packaging>pom</packaging>

    <developers>
        <developer>
            <id>aah</id>
            <name>Andreas Ahammer</name>
            <email>andreas.ahammer@gmail.com</email>
            <roles>
                <role>developer</role>
            </roles>
        </developer>
    </developers>

    <licenses>
        <license>
            <name>GNU General Public License (GPL), Version 2.0</name>
            <url>https://www.gnu.org/licenses/gpl-2.0.html</url>
        </license>
    </licenses>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <failOnMissingWebXml>false</failOnMissingWebXml>
        <!-- plugin -->
        <version.maven-copiler-plugin>2.5.1</version.maven-copiler-plugin>
        <version.maven-surefire-plugin>2.19</version.maven-surefire-plugin>
        <version.maven-dependency-plugin>2.10</version.maven-dependency-plugin>
        <version.maven-jacoco-plugin>0.7.5.201505241946</version.maven-jacoco-plugin>
        <version.coveralls-maven-plugin>3.1.0</version.coveralls-maven-plugin>
        <!-- runtime -->
        <version.javaee-api>7.0</version.javaee-api>
        <version.slf4j-api>1.6.1</version.slf4j-api>
        <version.guava>18.0</version.guava>
        <version.gson>2.4</version.gson>
        <!-- test -->
        <version.junit>4.11</version.junit>
        <version.arquillian-bom>1.1.10.Final</version.arquillian-bom>
        <version.weld-core>2.2.3.Final</version.weld-core>
        <version.weld-core-impl>2.2.2.Final</version.weld-core-impl>
        <version.slf4j-simple>1.6.4</version.slf4j-simple>
        <version.arquillian-weld-ee-embedded-1.1>1.0.0.CR3</version.arquillian-weld-ee-embedded-1.1>
        <version.arquillian-wildfly-embedded>8.2.1.Final</version.arquillian-wildfly-embedded>
        <version.wildfly-dist>9.0.2.Final</version.wildfly-dist>
        <version.arquillian-suite-extension>1.1.2</version.arquillian-suite-extension>
        <version.arquillian-osgi>2.1.0.Final</version.arquillian-osgi>
        <version.javassist>3.18.2-GA</version.javassist>
    </properties>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${version.maven-copiler-plugin}</version>
                </plugin>
                <plugin>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${version.maven-surefire-plugin}</version>
                </plugin>
                <plugin>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <version>${version.maven-dependency-plugin}</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <forkMode>once</forkMode>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${version.maven-jacoco-plugin}</version>
                <executions>
                    <execution>
                        <id>default-prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>default-report</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>default-check</id>
                        <goals>
                            <goal>check</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <rule>
                                    <element>BUNDLE</element>
                                    <limits>
                                        <limit>
                                            <counter>LINE</counter>
                                            <value>COVEREDRATIO</value>
                                            <minimum>0.80</minimum>
                                        </limit>
                                    </limits>
                                </rule>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.eluder.coveralls</groupId>
                <artifactId>coveralls-maven-plugin</artifactId>
                <version>${version.coveralls-maven-plugin}</version>
            </plugin>
        </plugins>
    </build>

    <dependencyManagement>
        <dependencies>
            <!-- runtime -->
            <dependency>
                <groupId>javax</groupId>
                <artifactId>javaee-api</artifactId>
                <version>${version.javaee-api}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${version.slf4j-api}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${version.guava}</version>
            </dependency>
            <dependency>
                <groupId>com.google.code.gson</groupId>
                <artifactId>gson</artifactId>
                <version>${version.gson}</version>
            </dependency>
            <!-- test -->
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${version.junit}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.jboss.arquillian</groupId>
                <artifactId>arquillian-bom</artifactId>
                <version>${version.arquillian-bom}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
            <dependency>
                <groupId>org.eu.ingwar.tools</groupId>
                <artifactId>arquillian-suite-extension</artifactId>
                <version>${version.arquillian-suite-extension}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-simple</artifactId>
                <version>${version.slf4j-simple}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.javassist</groupId>
                <artifactId>javassist</artifactId>
                <version>${version.javassist}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- runtime -->
        <dependency>
            <groupId>javax</groupId>
            <artifactId>javaee-api</artifactId>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>
        <!-- test -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
        </dependency>
        <dependency>
            <groupId>org.jboss.arquillian.junit</groupId>
            <artifactId>arquillian-junit-container</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <profiles>
        <!-- profile for all dependencies required to run arquillian-tests -->
        <profile>
            <id>arquillian-test-dependencies</id>
            <activation>
                <activeByDefault>false</activeByDefault>
                <file>
                    <exists>src/test/resources/arquillian-test-dependencies.profile</exists>
                </file>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <!-- create a wildfly in target-folder for tests -->
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-dependency-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>unpack</id>
                                <phase>process-test-classes</phase>
                                <goals>
                                    <goal>unpack</goal>
                                </goals>
                                <configuration>
                                    <artifactItems>
                                        <artifactItem>
                                            <groupId>org.wildfly</groupId>
                                            <artifactId>wildfly-dist</artifactId>
                                            <version>${version.wildfly-dist}</version>
                                            <type>zip</type>
                                            <overWrite>false</overWrite>
                                            <outputDirectory>${project.build.directory}</outputDirectory>
                                            <excludes>**/docs/**</excludes>
                                        </artifactItem>
                                    </artifactItems>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>${version.maven-surefire-plugin}</version>
                        <!-- https://docs.jboss.org/author/display/ARQ/WildFly+8.1.0+-+Embedded -->
                        <configuration>
                            <forkMode>once</forkMode>
                            <systemPropertyVariables>
                                <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
                                <jboss.home>${project.basedir}/target/wildfly-9.0.2.Final</jboss.home>
                                <module.path>${project.basedir}/target/wildfly-9.0.2.Final/modules</module.path>
                            </systemPropertyVariables>
                            <argLine>-Xverify:none -XX:+UseParallelGC -Xmx1024M -XX:MaxPermSize=256m -Djava.net.preferIPv4Stack=true -Djboss.socket.binding.port-offset=100</argLine>
                            <redirectTestOutputToFile>false</redirectTestOutputToFile>
                        </configuration>
                    </plugin>

                </plugins>
            </build>
            <dependencyManagement>
                <dependencies>
                    <dependency>
                        <groupId>org.wildfly</groupId>
                        <artifactId>wildfly-arquillian-container-embedded</artifactId>
                        <version>${version.arquillian-wildfly-embedded}</version>
                        <scope>test</scope>
                    </dependency>
                    <dependency>
                        <groupId>org.jboss.arquillian.protocol</groupId>
                        <artifactId>arquillian-protocol-servlet</artifactId>
                        <version>${version.arquillian-bom}</version>
                        <scope>test</scope>
                    </dependency>
                    <dependency>
                        <groupId>org.wildfly</groupId>
                        <artifactId>wildfly-embedded</artifactId>
                        <version>${version.wildfly-dist}</version>
                    </dependency>
                </dependencies>
            </dependencyManagement>
            <dependencies>
                <dependency>
                    <groupId>org.wildfly</groupId>
                    <artifactId>wildfly-arquillian-container-embedded</artifactId>
                    <scope>test</scope>
                </dependency>
                <dependency>
                    <groupId>org.jboss.arquillian.protocol</groupId>
                    <artifactId>arquillian-protocol-servlet</artifactId>
                    <scope>test</scope>
                </dependency>
                <dependency>
                    <groupId>org.wildfly</groupId>
                    <artifactId>wildfly-embedded</artifactId>
                    <scope>test</scope>
                </dependency>
                <dependency>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-simple</artifactId>
                    <scope>test</scope>
                </dependency>
                <dependency>
                    <groupId>org.eu.ingwar.tools</groupId>
                    <artifactId>arquillian-suite-extension</artifactId>
                    <scope>test</scope>
                    <exclusions>
                        <exclusion>
                            <artifactId>javassist</artifactId>
                            <groupId>javassist</groupId>
                        </exclusion>
                    </exclusions>
                </dependency>
                <dependency>
                    <groupId>org.javassist</groupId>
                    <artifactId>javassist</artifactId>
                    <scope>test</scope>
                </dependency>
            </dependencies>
        </profile>
    </profiles>
</project>
